<resources>
    <string name="app_name">MovieDBApp</string>
    <string name="welcome_text">Find your next favorite movie</string>
    <string name="welcome_description">Get a new experience watching interesting movies and series of principals stream players</string>
    <string name="get_started">Get Started</string>
    <string name="movie_bg_description">Image that represents dune movie poster</string>
    <string name="next">Next</string>
    <string name="name_input">Name</string>
    <string name="subtitle_name">It\'ll help us to improve your experience</string>
    <string name="title_name">What\'s your name</string>
    <string name="greeting_subtitle">Book your favorite movies</string>
    <string name="search">Search</string>
    <string name="featured_movies">Featured Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_search_vector_content_description">Vector that represents an empty search</string>
    <string name="we_re_sorry">We are sorry</string>
    <string name="empty_content_message">There are no results that matched your search term</string>
    <string name="vector_error_content_description">Vector image that represents an error</string>
    <string name="no_connection_error_message">Internet connection is bad, but no worries, we got it! Try reload the app.</string>
    <string name="no_connection_error_title">Oops! Something was wrong</string>
    <string name="reload">Reload</string>
    <string name="shimmer_layout">shimmer layout</string>
    <string name="hello">Hello!</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile_description">Set your preferences here</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="by_genres">By Genres</string>
    <string name="home">Home</string>
</resources>
