<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="@dimen/base_screen_padding"
    android:paddingTop="@dimen/spacing_xxl"
    android:paddingBottom="@dimen/base_screen_padding">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/title_name"
        android:textColor="@color/text"
        android:textSize="@dimen/font_body"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_name"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:backgroundTint="@color/surface"
        android:hint="@string/name_input"
        android:textColorHint="@color/gray"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_input_border"
            android:backgroundTint="@color/surface"
            android:textColor="@color/text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_giant"
        android:backgroundTint="@color/button_state_color"
        android:enabled="false"
        android:fontFamily="@font/inter"
        android:padding="@dimen/spacing_md"
        android:text="@string/next"
        android:textSize="@dimen/font_body"
        app:cornerRadius="@dimen/border_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
