<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.WelcomeActivity">

    <FrameLayout
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:layout_constraintBottom_toTopOf="@id/linear_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/movie_detail_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_bg_description"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/trending_gradient_shape" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rajdhani_bold"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/text"
            android:textSize="@dimen/font_headline"
            app:fontFamily="@font/rajdhani_bold" />

        <TextView
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxs"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:text="@string/welcome_description"
            android:textColor="@color/gray"
            android:textSize="@dimen/font_body" />

    </LinearLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_xxl"
        android:background="@drawable/rounded_border"
        android:fontFamily="@font/inter"
        android:padding="@dimen/spacing_xs"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="@dimen/font_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
