<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="@dimen/base_screen_padding"
    android:paddingTop="@dimen/spacing_xxl"
    android:paddingBottom="@dimen/base_screen_padding"
    tools:context=".presentation.view.home.HomeActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hello, Will!"
        android:textColor="@color/white"
        android:textSize="@dimen/font_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/greeting_subtitle"
        android:textColor="@color/text"
        android:textSize="@dimen/font_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:backgroundTint="@color/surface"
        android:hint="@string/search"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_subtitle"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_input_border"
            android:backgroundTint="@color/surface" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_featured_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:text="@string/featured_movies"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="@dimen/font_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_featured_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_featured_movies" />

</androidx.constraintlayout.widget.ConstraintLayout>
